--- a/lib/package.json
+++ b/lib/package.json
@@ -9,6 +9,7 @@
     "angular-route": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
