--- a/lib/package.json
+++ b/lib/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
+    "angular-base64": "^2.0.5",
+    "angular-base64-upload": "^0.1.23",
     "angular-route": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "bootstrap": "^3.3.7",
